ready to deploy

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,10 +2,90 @@
 <html>
     <head>
        <meta charset="utf-8">
-       <title>CSS Dark Folded Sign In Form</title>
+       <title>Login</title>
        <link rel="stylesheet" href="/static/login.css">
        <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-        
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+*{
+    padding: 0;
+    margin: 0; 
+    font-family: 'Quicksand', sans-serif;
+}
+body{
+    background: #fff;
+}
+.container{
+    position: relative;
+    width: 100%;  height: 100vh;
+    background: url(https://images.squarespace-cdn.com/content/v1/519a7bc0e4b08ccdf8f31445/1562330407850-F8DQEHOOVMMTAGG3BQWJ/ke17ZwdGBToddI8pDm48kOggE0Ch6pMGalwtLMqzsSB7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1Ufo5RWkg_J4of0jUNHaDHx6pZKBvpVYzidBWCapg0tuoMuEaB2HPGSYDV-11UTcW2g/Comment+r%C3%A9ussir+%C3%A0+concilier+ville+et+nature+%3F);
+    background-size: cover;
+}
+.container .box{
+    position: absolute;
+    top: 30%;  left: 50%;
+    transform: translate(-50%,-50%);
+    width: 500px;  height: 70px;
+}
+.container .box .sign-in{
+    position: relative;
+    width: 100%;   height: 100%; 
+    text-align: center;  line-height: 70px;
+    background: #03a9f4;   color: #fff;
+    display: inline-block;
+    font-size: 30px;
+    cursor: pointer;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+.container .box .login{
+    position: absolute;
+    top: 100%;  left: 0;
+    width: 100%;   height: 300px;
+    background: rgba(0,0,0,.8);
+    padding: 40px 20px;
+    box-sizing: border-box;
+    transform-origin: top;
+    transform: perspective(1000px) rotateX(0deg);
+    transition: .9s;
+}
+.container .box .login.active{
+    transform: perspective(1000px) rotateX(-90deg);
+}
+.container .box .login input{
+    border: none;   outline: none;
+    width: 100%;  height: 50px;
+    border: 1px solid #fff;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    background: transparent;
+    margin-bottom: 25px;
+    color: #fff;
+    font-size: 20px;
+}
+
+
+.container .box .login button{
+    display: block;
+    width: 150px;  
+    height: 50px;
+    text-align: center;  
+    line-height: 50px;
+    border-radius: 20px;
+    background: #474545;  
+    text-decoration: none;
+    margin-bottom: 20px;
+    color: #fff;
+    border:2px solid #333;
+    cursor: pointer;
+    transition: .2s; 
+}
+.container .box .login button:hover{
+    background: #03a9f4;
+}
+
+        </style>
        </head>
     <body>
         <div class="container">
